Fixed a few z-index issues.

--- a/public/bundles/components/component-double-button/component.css
+++ b/public/bundles/components/component-double-button/component.css
@@ -15,6 +15,7 @@
   width: 50%;
   line-height: 0px;
   font-size: 0px;
+  z-index: 1;
 }
 
 :host .buttons-wrapper {
@@ -50,12 +51,11 @@
   z-index: 3;
   background: rgba(0,0,0,.25);
   border-radius: 0 0 3px 3px;
-  z-index: 1;
 }
 
 :host .label {
   font-weight: 400;
-  z-index: 9999;
+  z-index: 4;
   position: absolute;
   top: 0px;
   left: 0px;
