--- a/public/stylesheets/loading.css
+++ b/public/stylesheets/loading.css
@@ -9,6 +9,7 @@
   transition: opacity .4s ease-in .2s;
   top: 0;
   opacity: 1;
+  z-index: 9999;
 }
 
 .loading-pane.fade {
